cloud/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 SSH - in
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set -m comment --comment 'dapp_SSH'
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 30 -j ufw-user-limit -m comment --comment 'dapp_SSH'
-A ufw-user-input -p tcp --dport 22 -j ufw-user-limit-accept -m comment --comment 'dapp_SSH'

### tuple ### allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 SMTP - in
-A ufw-user-input -p tcp --dport 25 -j ACCEPT -m comment --comment 'dapp_SMTP'

### tuple ### allow tcp 993 0.0.0.0/0 any 0.0.0.0/0 IMAPS - in
-A ufw-user-input -p tcp --dport 993 -j ACCEPT -m comment --comment 'dapp_IMAPS'

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 WWW - in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT -m comment --comment 'dapp_WWW'

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 WWW%20Secure - in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT -m comment --comment 'dapp_WWW%20Secure'

### tuple ### allow any 9418 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9418 -j ACCEPT
-A ufw-user-input -p udp --dport 9418 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
